--- a/src/components/Cast/cast.module.css
+++ b/src/components/Cast/cast.module.css
@@ -17,7 +17,7 @@
 
 .listItem:hover,
 .listItem:focus {
-    background-color: rgb(255, 178, 35);
+    background-color: #cd7eff;
     color: #e9e9e9;
 }
 
@@ -47,4 +47,15 @@
     color: #272727;
     margin-left: 150px;
     margin-top: 40px;
+}
+
+.loading {
+    display: flex;
+    width: 100%;
+    /* height: 100vh; */
+    /* background: #7400bc29; */
+    position: relative;
+    transition: 0.5s;
+    top: 0;
+    left: 0;
 }
