--- a/src/components/Home/home.module.css
+++ b/src/components/Home/home.module.css
@@ -6,11 +6,21 @@
     width: 25px;
     height: 25px;
     left: -20px;
-    /* fill: #272727; */
 }
 
 .movieItem:hover,
 .movieItem:focus {
-    color: orange;
+    color: #7400bc;
     cursor: pointer;
+}
+
+.loading {
+    display: flex;
+    width: 100%;
+    height: 100vh;
+    background: #7400bc29;
+    position: absolute;
+    transition: 0.5s;
+    top: 0;
+    left: 0;
 }
