--- a/src/components/MovieDetails/movie-details.module.css
+++ b/src/components/MovieDetails/movie-details.module.css
@@ -16,19 +16,18 @@
 }
 
 .btn {
-    padding: 9px 9px 9px 25px;
-    color: orange;
+    padding-left: 25px;
+    color: #272727;
     font-size: 16px;
     border: none;
     background-color: #fff;
     border-radius: 7px;
-    margin: 20px 0 0 5px;
+    margin-left: 5px;
 }
 
 .btn:hover {
-    color: #272727;
+    color: #7400bc;
     cursor: pointer;
-    fill: #272727;
 }
 
 .btn::before {
@@ -39,7 +38,7 @@
     width: 15px;
     height: 15px;
     left: 10px;
-
+    top: 122px;
 }
 
 .btnList {
@@ -50,7 +49,7 @@
 
 .castBtn {
     padding: 9px;
-    background-color: orange;
+    background-color: #7400bc;
     font-size: 16px;
     border: none;
     width: 110px;
@@ -74,8 +73,9 @@
 }
 
 .reviewsBtn {
+    position: relative;
     padding: 9px 9px 9px 25px;
-    background-color: orange;
+    background-color: #7400bc;
     font-size: 16px;
     width: 110px;
     border: none;
@@ -85,13 +85,14 @@
 }
 
 .reviewsBtn::before {
-    content: "";
+    content: '';
     background-image: url(../SVG/book-alt2.svg);
     background-size: cover;
     position: absolute;
     width: 15px;
     height: 15px;
-    left: 250px;
+    left: 10px;
+    top: 10px;
 }
 
 .reviewsBtn:hover {
@@ -102,4 +103,15 @@
 .descrTitle {
     font-size: 20px;
     font-weight: 600;
+}
+
+.loading {
+    display: flex;
+    width: 100%;
+    height: 100vh;
+    background: #7400bc29;
+    position: absolute;
+    transition: 0.5s;
+    top: 0;
+    left: 0;
 }
