--- a/src/components/Movies/movies.module.css
+++ b/src/components/Movies/movies.module.css
@@ -49,7 +49,7 @@
 
 .btn {
     padding: 11px;
-    background-color: orange;
+    background-color: #30004d;
     font-size: 16px;
     border: none;
     color: #fff;
@@ -91,4 +91,15 @@
 .listItem:focus {
     color: orange;
     cursor: pointer;
+}
+
+.loading {
+    display: flex;
+    width: 100%;
+    height: 100vh;
+    background: #7400bc29;
+    position: absolute;
+    transition: 0.5s;
+    top: 0;
+    left: 0;
 }
