--- a/src/components/Reviews/reviews.module.css
+++ b/src/components/Reviews/reviews.module.css
@@ -37,3 +37,14 @@
     margin-left: 100px;
     margin-top: 40px;
 }
+
+.loading {
+    display: flex;
+    width: 100%;
+    /* height: 100vh; */
+    /* background: #7400bc29; */
+    position: relative;
+    transition: 0.5s;
+    top: 0;
+    left: 0;
+}
