--- a/src/components/app.module.css
+++ b/src/components/app.module.css
@@ -3,8 +3,9 @@
     justify-content: flex-start;
     align-items: center;
     width: 100%;
-    height: 70px;
-    background-color: #392c2c;
+    height: 90px;
+    background-color: #30004d;
+    margin-bottom: 30px;
 }
 
 .navigation::before {
@@ -18,5 +19,16 @@
 }
 
 .active {
-    color: orange;
+    color: rgb(255, 132, 0);
+}
+
+.loading {
+    display: flex;
+    width: 100%;
+    height: 100vh;
+    background: #7400bc29;
+    position: absolute;
+    transition: 0.5s;
+    top: 0;
+    left: 0;
 }
